...
    <string name="enter_serial_or_barcode_number">Enter serial or barcode number</string>
    <string name="enter_device_type_name">Enter device type name</string>
    <string name="serial_number_empty">Serial number cannot be empty.</string>
    <string name="results">Results</string>
    <string name="no_results_found">No Results Found</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="find">Find</string>
    <string name="device">Device</string>
    <string name="devices">Devices</string>
...
    <string name="name">Name</string>
    <!-- Number Picker -->
    <string name="number_picker_formatter">%d</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="permissions">Permissions</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="passed_electric_revision">Passed electric revision?</string>
    <string name="inventory_device_present">Device present?</string>

    <string name="device_doesnt_exist">Device doesn\'t exist</string>
    <string name="device_with_barcode_not_found">Device with barcode %1$s not found</string>
    <string name="do_you_want_to_create_new_device">Device with barcode %1$s not found. Would you like to create new device?</string>
...
